Added pedidos/{email} and detallesPedido/{id} api endpoints
