# routes/api.php
@@ -25,4 +25,6 @@ Route::get('/categorias',[ApiController::class,'categorias']);
 Route::get('/productos/{id}',[ApiController::class,'producto']);
 Route::get('/productos',[ApiController::class,'productos']);
 Route::get('/productos/query/{query}',[ApiController::class,'productosByQuery']);
+Route::get('/pedidos/{id}', [ApiController::class, 'pedidosUsuario']);
+Route::get('/detallesPedido/{id}', [ApiController::class, 'detallesPedido']);
 Route::post('/pedidos',[ApiController::class,'storePedido']);
